overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: le-prod
    external-dns.alpha.kubernetes.io/hostname: www-dev.aethericforge.ca,aethericforge.ca
    external-dns.alpha.kubernetes.io/target: 212.2.247.176
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "8"
  name: aethericforge-web
  namespace: aetheric-forge
spec:
  ingressClassName: nginx-public
  rules:
  - host: www-dev.aethericforge.ca
    http:
      paths:
      - backend:
          service:
            name: aethericforge-web
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: www.aethericforge.ca
    http:
      paths:
      - backend:
          service:
            name: aethericforge-web
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: aethericforge.ca
    http:
      paths:
      - backend:
          service:
            name: aethericforge-web
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - www-dev.aethericforge.ca
    - www.aethericforge.ca
    - aethericforge.ca
    secretName: aethericforge-web-tls
