overlays/dev/redirect-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aethericforge-web-redirect
  namespace: aetheric-forge
  annotations:
    external-dns.alpha.kubernetes.io/controller: ignore
    nginx.ingress.kubernetes.io/permanent-redirect: https://www-dev.aethericforge.ca$request_uri
    nginx.ingress.kubernetes.io/permanent-redirect-code: "308"
spec:
  ingressClassName: nginx-public
  rules:
  - host: www.aethericforge.ca
    http:
      paths:
      - backend:
          service:
            name: aethericforge-web
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: aethericforge.ca
    http:
      paths:
      - backend:
          service:
            name: aethericforge-web
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - www.aethericforge.ca
    - aethericforge.ca
    secretName: aethericforge-web-tls
